--- a/hacksec_tempmail/hacksec-webmail/index.html
+++ b/hacksec_tempmail/hacksec-webmail/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Self hosted temp mail server" />
     <meta name="author" content="script1337x" />
-    <title>hacksec - tempmail</title>
+    <title>PEJUANG AZURE</title>
 
     <link
       rel="canonical"
@@ -48,12 +48,12 @@
       <!-- Place this tag where you want the button to render. -->
       <a
         class="github-button"
-        href="https://github.com/ScRiPt1337/spam_box/fork"
+        href="https://instagram.com/m.faizal_zx"
         data-color-scheme="no-preference: dark; light: dark; dark: dark;"
         data-size="large"
         data-show-count="true"
-        aria-label="Fork ScRiPt1337/spam_box on GitHub"
-        >Fork</a
+        aria-label="Instagram"
+        >Update</a
       >
       <a
         class="navbar-brand col-md-3 col-lg-2 me-0 px-3"
